MUI textfields fix, spacing

--- a/components/section/themeSection.module.css
+++ b/components/section/themeSection.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   padding-top: 5rem;
-  padding-bottom: 3rem;
+  padding-bottom: 5rem;
 }
 .themeContainer {
   background: var(--primary-30);
