--- a/components/testimonySection/testimonySection.module.css
+++ b/components/testimonySection/testimonySection.module.css
@@ -1,3 +1,8 @@
+.wrapper {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 .heading {
   font-weight: 500;
   font-size: 1rem;
